# talk2me

./: .gitignore  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-assessment.md  code-review.md  integration-plan.md  perf-notes.md  permission-handling-design.md  permission-spike-results.md  retro-skin-plan.md  security-audit.md  stt-upgrade-research.md  v2.5-aec-plan.md  wispr-spike.md
scripts/: claude-speak.py  spike_vpio.py
talk2me/: __init__.py  __main__.py  audio.py  config.py  continuity.py  echogate.py  events.py  factory.py  orchestrator.py  phone.py  protocols.py  render.py  retro.py  segment.py  session.py  sessionlog.py  speechcheck.py  typeline.py  voicelock.py  vpio.py  wizard.py
talk2me/backends/: __init__.py  claude_code.py  codex.py
talk2me/input/: __init__.py  wispr_spike.py
talk2me/stt/: __init__.py  parakeet.py  whisper.py
talk2me/tts/: __init__.py  kitten.py  null.py  say.py
talk2me/vad/: __init__.py  energy.py  silero.py  webrtc.py
tests/: __init__.py  fakes.py  manual_backend_check.py  manual_parakeet_barge_check.py  manual_vpio_selfcut_check.py  test_backend_translate.py  test_barge_in.py  test_codex_translate.py  test_continuation.py  test_devices.py  test_echogate.py  test_factory.py  test_flow.py  test_loop_offline.py  test_permission.py  test_phone.py  test_render.py  test_retro.py  test_segment.py  test_sentences.py  test_speaker_stop.py  test_typeline.py  test_voicelock.py  test_vpio.py  test_webrtc_vad.py  test_wizard.py
