[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2me"
version = "0.1.0"
description = "Hands-free voice loop for terminal coding agents (Claude Code by default)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nate Davidovich" }]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
# WebRTC VAD (more robust than the RMS energy default across mics, esp. Bluetooth).
# webrtcvad-wheels ships prebuilt wheels; the original `webrtcvad` sdist fails to
# build on modern Python. Install with: pip install talk2me[webrtc]
webrtc = ["webrtcvad-wheels>=2.0"]
# KittenTTS — local neural voice (cross-platform; the only built-in voice option
# off macOS). Install with: pip install talk2me[kitten]
kitten = ["kittentts>=0.1"]

[project.scripts]
talk2me = "talk2me.__main__:main"

[tool.setuptools.packages.find]
include = ["talk2me*"]

[tool.setuptools.package-data]
talk2me = ["py.typed"]
