[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "talk2me"
version = "2.4.0"
description = "Hands-free voice loop for terminal coding agents (Claude Code by default)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nate Davidovich" }]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
    "rich>=13,<15",
    "websockets>=15,<16",
    "kaldi-native-fbank>=1.20",
    # Native AEC (vpio.py): macOS voice-processing capture. Darwin-only; every
    # other platform rides the userspace echo-gate fallback.
    "pyobjc-framework-AVFoundation>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# WebRTC VAD (more robust than the RMS energy default across mics, esp. Bluetooth).
# webrtcvad-wheels ships prebuilt wheels; the original `webrtcvad` sdist fails to
# build on modern Python. Install with: pip install talk2me[webrtc]
webrtc = ["webrtcvad-wheels>=2.0"]
# KittenTTS — local neural voice (cross-platform; the only built-in voice option
# off macOS). Install with: pip install talk2me[kitten]
kitten = ["kittentts>=0.1"]
# Parakeet STT — NVIDIA Parakeet TDT on the Apple-Silicon GPU via MLX. More
# accurate and ~10x faster than local Whisper; ~2 GB RAM; English-only; pure
# MLX (no torch). Install with: pip install talk2me[parakeet]
parakeet = ["parakeet-mlx>=0.3"]

[project.scripts]
talk2me = "talk2me.__main__:main"
t2m = "talk2me.__main__:main"

[tool.setuptools.packages.find]
include = ["talk2me*"]

[tool.setuptools.package-data]
talk2me = ["py.typed"]
